login, signup, logout, google login

--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,5 @@
-DB_URL = mongodb+srv://carrots:4TCydOq1TzdsultD@letsbarter.wclqfd5.mongodb.net/letsbarter?retryWrites=true&w=majority&appName=letsbarter
+DB_URL = mongodb+srv://carrots:bP5FR1ZouSXMT1aD@letsbarter.wclqfd5.mongodb.net/letsbarter?retryWrites=true&w=majority&appName=letsbarter
+secret = 'ligma';
+client_ID = 887837703713-u6gpgilfqbal266lv932qi2lp1vr82qo.apps.googleusercontent.com
+client_secret = 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
+client_callback = http://localhost:3000/user/oauth
