--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "A trading web application for users to trade or barter with each other, using their second hand goods rather than with money.",
   "main": "index.js",
   "scripts": {
-    "start": "node backend/app.js",
-    "build": "npm install --prefix backend && npm install --prefix frontend && npm run build --prefix frontend"
+    "build": "npm install --prefix backend && npm install --prefix frontend && npm run build --prefix frontend",
+    "start": "node backend/app.js"
   },
   "repository": {
     "type": "git",
