--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "A trading web application for users to trade or barter with each other, using their second hand goods rather than with money.",
   "main": "backend/app.js",
+  "engines": {
+    "node": ">=22.12.0"
+  },
   "scripts": {
     "build": "npm install --prefix backend && npm install --prefix frontend && npm run build --prefix frontend",
     "start": "node backend/app.js"
